--- a/spec_system/multipleMimeTypes.yaml
+++ b/spec_system/multipleMimeTypes.yaml
@@ -1,13 +1,13 @@
-swagger: '2.0'
+protocol: "0.1.5"
 info:
-  version: 1.0.9-abcd
-  title: 'Swagger Sample API'
-  description: 'A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification'
-  termsOfService: 'http://helloreverb.com/terms/'
-  contact: {name: 'wordnik api team', url: 'http://developer.wordnik.com'}
-  license: {name: 'Creative Commons 4.0 International', url: 'http://creativecommons.org/licenses/by/4.0/'}
-host: my.api.com
-basePath: /v1
+  version: 
+  title: 
+  description: 
+  termsOfService: 
+  contact: 
+  license: 
+host: ${host_url}
+basePath: /protocol
 schemes:
   - http
   - https
@@ -26,7 +26,7 @@ produces:
   - application/json
   - application/xml
 paths:
-  '/pets/{id}': {parameters: [{name: id, in: path, description: 'ID of pet to use', required: true, type: array, items: {type: string}, collectionFormat: csv}], get: {description: 'Returns pets based on ID', summary: 'Find pets by ID', operationId: getPetsById, produces: [application/json, text/html], responses: {'200': {description: 'pet response', schema: {type: array, items: {$ref: Pet}}}, default: {description: 'error payload', schema: {$ref: ErrorModel}}}}}
+  '/protocol/{id}': {parameters: [{name: id, in: path, description: 'ID of protocol to use', required: true, type: array, items: {type: string}, collectionFormat: csv}], get: {description: 'Returns protocol based on ID', summary: 'Find protocol by ID', operationId: getProtocolById, produces: [application/json, text/html], responses: {'200': {description: 'protocol response', schema: {type: array, items: {$ref: Protocol}}}, default: {description: 'error payload', schema: {$ref: ErrorModel}}}}}
 definitions:
-  Pet: {required: [name], properties: {name: {type: string}, tag: {type: string}}}
+  Protocol: {required: [name], properties: {name: {type: string}, tag: {type: string}}}
   ErrorModel: {required: [code, message], properties: {code: {type: integer, format: int32}, message: {type: string}}}
