--- a/spec_system/operations/operationWithTags.yaml
+++ b/spec_system/operations/operationWithTags.yaml
@@ -1,6 +1,6 @@
-description: 'Returns a pet based on ID'
-summary: 'Find pet by ID'
-operationId: getPetsById
+description: 'Returns a protocol based on ID'
+summary: 'Find protocol by ID'
+operationId: getprotocolsById
 tags:
   - foo
   - bar
@@ -8,7 +8,7 @@ produces:
   - application/json
   - text/html
 parameters:
-  - {name: petId, in: path, description: 'ID of pet that needs to be fetched', required: true, type: integer, format: int64}
+  - {name: protocolId, in: path, description: 'ID of protocol that needs to be fetched', required: true, type: integer, format: int64}
 responses:
-  '200': {description: 'a pet to be returned', schema: {$ref: Pet}}
+  '200': {description: 'a protocol to be returned', schema: {$ref: protocol}}
   default: {description: 'Unexpected error', schema: {$ref: ErrorModel}}
