--- a/spec_system/operations/stringPathParamResource.yaml
+++ b/spec_system/operations/stringPathParamResource.yaml
@@ -1,12 +1,12 @@
-description: 'Returns a pet based on ID'
-summary: 'Find pet by ID'
-operationId: getPetsById
+description: 'Returns a protocol based on ID'
+summary: 'Find protocol by ID'
+operationId: getprotocolsById
 produces:
   - application/json
   - text/html
 parameters:
-  - {name: petId, in: path, description: 'ID of pet that needs to be fetched', required: true, type: integer, format: int64}
+  - {name: protocolId, in: path, description: 'ID of protocol that needs to be fetched', required: true, type: integer, format: int64}
 responses:
-  '200': {description: fun, schema: {$ref: Pet}}
+  '200': {description: fun, schema: {$ref: protocol}}
   '400': {description: 'Invalid ID supplied <= this is purely for documentation', schema: {$ref: ErrorModel}}
   default: {description: 'Unexpected error', schema: {$ref: ErrorModel}}
