--- a/specifications/spec_system/parameters/formDataInt64Parameter.yaml
+++ b/specifications/spec_system/parameters/formDataInt64Parameter.yaml
@@ -1,6 +1,6 @@
 name: id
 in: formData
-description: "username to fetch"
+description: 'username to fetch'
 required: true
 type: integer
 format: int64
