--- a/specifications/spec_system/parameters/formDataStringArrayParameter.yaml
+++ b/specifications/spec_system/parameters/formDataStringArrayParameter.yaml
@@ -1,6 +1,6 @@
 name: user
 in: formData
-description: "user to add to the system"
+description: 'user to add to the system'
 required: true
 type: array
 items:
